now _incomingMessage, indicating privacy

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -4,24 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## Proof of concept: exploring functional genetics in a Jupyter notebook using igap snps\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[github conversation](https://github.com/ipython/ipywidgets/issues/838#issuecomment-255506936)|"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [
@@ -49,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 194,
    "metadata": {
     "collapsed": false
    },
@@ -65,63 +47,52 @@
     "    _view_module = Unicode('cyjs').tag(sync=True)\n",
     "    frameWidth = Int(400).tag(sync=True)\n",
     "    frameHeight = Int(300).tag(sync=True)\n",
-    "    msgStringFromKernel = Unicode(\"{}\").tag(sync=True)\n",
-    "    msgStringFromBrowser = Unicode(\"{}\").tag(sync=True)\n",
-    "    rawMessage = None\n",
-    "    msg = {};\n",
-    "    inMessage = {};\n",
+    "    msgFromKernel = Unicode(\"{}\").tag(sync=True)\n",
+    "    msgFromBrowser = Unicode(\"{}\").tag(sync=True)\n",
+    "    _incomingMessage = {};\n",
     "    status = \"initial status message\\n\"\n",
     "    selectedNodes = [];\n",
     "        \n",
     "    def setSize(self, width, height):\n",
-    "       self.status += \"setSize(%d, %d)\\n\" % (width, height)\n",
-    "       self.frameWidth = width\n",
-    "       self.frameHeight = height\n",
+    "      self.status += \"setSize(%d, %d)\\n\" % (width, height)\n",
+    "      self.frameWidth = width\n",
+    "      self.frameHeight = height\n",
     "        \n",
     "    def fit(self, margin=50):\n",
     "      self.status += \"entering fit (%d)\\n\" % margin\n",
-    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
     "                                              \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
     "      #self.selectedNodes = [];\n",
     "      self.status += \"entering getSelectedNodes\\n\";\n",
-    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
-    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
-    "                                             \"callback\": \"\", \"payload\": \"\"});\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
+    "                                       \"callback\": \"\", \"payload\": \"\"});\n",
     "    def selectNodes(self, nodes):\n",
-    "      self.msgStringFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
-    "                                              \"callback\": \"\", \"payload\": nodes});\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
+    "                                       \"callback\": \"\", \"payload\": nodes});\n",
     "       \n",
     "    def clearSelection(self):\n",
-    "      self. msgStringFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
-    "                                              \"callback\": \"\", \"payload\": \"\"});\n",
-    "\n",
+    "      self. msgFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
+    "                                        \"callback\": \"\", \"payload\": \"\"});\n",
     "        \n",
-    "    @observe('msgStringFromBrowser')\n",
+    "    @observe('msgFromBrowser')\n",
     "    def msg_arrived(self, change):\n",
-    "        self.status += \"---- python - msg arrived\\n\"\n",
-    "        self.rawMessage = change['new']\n",
-    "        self.status += \"rawMessage: %s\" % (self.rawMessage)\n",
-    "        self.status += \"len of rawMessage: %d\\n\" % len(self.rawMessage)\n",
-    "        self.status += \"type of rawMessage: %s\\n\" % type(self.rawMessage)\n",
-    "        self.status += \"parsed: %s\" % json.loads(self.rawMessage)\n",
-    "        self.inMessage = json.loads(self.rawMessage)\n",
-    "        self.status += \"type of mstp: %s\\n\" % (type(self.inMessage))\n",
-    "        self.status += \"%s\\n\" % self.rawMessage\n",
-    "        self.msg = self.inMessage\n",
+    "       rawMessage = change['new']\n",
+    "       self._incomingMessage = json.loads(rawMessage)\n",
     "         \n",
     "    def getResponse(self):\n",
-    "        return(self.inMessage[\"payload\"])\n",
+    "       return(self._incomingMessage[\"payload\"])\n",
     "\n",
     "    def getFullResponse(self):\n",
-    "        return(self.inMessage)\n",
+    "       return(self._incomingMessage)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +113,7 @@
        "           this.circleCount = 0;\n",
        "           this.options = {}; \n",
        "           this.msg = \"empty in javascript\";\n",
-       "           this.msgStringFromKernel = \"\";\n",
+       "           this.msgFromKernel = \"\";\n",
        "           this.defaultHeight = \"800px\";\n",
        "           this.defaultWidth = \"1000px\";\n",
        "           },\n",
@@ -277,7 +248,7 @@
        "            this.$el.append(this.createDiv());\n",
        "            this.listenTo(this.model, 'change:frameWidth', this.frameDimensionsChanged, this);\n",
        "            this.listenTo(this.model, 'change:frameHeight', this.frameDimensionsChanged, this);\n",
-       "            this.listenTo(this.model, 'change:msgStringFromKernel', this.dispatchRequest, this);\n",
+       "            this.listenTo(this.model, 'change:msgFromKernel', this.dispatchRequest, this);\n",
        "            var cyjsWidget = this;\n",
        "            function myFunc(){\n",
        "               cyjsWidget.createCanvas()\n",
@@ -287,7 +258,7 @@
        "\n",
        "        dispatchRequest: function(){\n",
        "           console.log(\"dispatchRequest\");\n",
-       "           var msgRaw = this.model.get(\"msgStringFromKernel\");\n",
+       "           var msgRaw = this.model.get(\"msgFromKernel\");\n",
        "           var msg = JSON.parse(msgRaw);\n",
        "           console.log(msg);\n",
        "           console.log(\"========================\");\n",
@@ -309,8 +280,8 @@
        "                                                payload: selectedNodes})\n",
        "                  console.log(\" *** jsonString: \")\n",
        "                  console.log(jsonString);\n",
-       "                  this.model.set(\"msgStringFromBrowser\", jsonString);\n",
-       "                  console.log(\"    after setting 'msgStringFromBrowser\");\n",
+       "                  this.model.set(\"msgFromBrowser\", jsonString);\n",
+       "                  console.log(\"    after setting 'msgFromBrowser\");\n",
        "                  this.touch();\n",
        "                  break;\n",
        "               case 'selectNodes':\n",
@@ -380,7 +351,7 @@
     "           this.circleCount = 0;\n",
     "           this.options = {}; \n",
     "           this.msg = \"empty in javascript\";\n",
-    "           this.msgStringFromKernel = \"\";\n",
+    "           this.msgFromKernel = \"\";\n",
     "           this.defaultHeight = \"800px\";\n",
     "           this.defaultWidth = \"1000px\";\n",
     "           },\n",
@@ -515,7 +486,7 @@
     "            this.$el.append(this.createDiv());\n",
     "            this.listenTo(this.model, 'change:frameWidth', this.frameDimensionsChanged, this);\n",
     "            this.listenTo(this.model, 'change:frameHeight', this.frameDimensionsChanged, this);\n",
-    "            this.listenTo(this.model, 'change:msgStringFromKernel', this.dispatchRequest, this);\n",
+    "            this.listenTo(this.model, 'change:msgFromKernel', this.dispatchRequest, this);\n",
     "            var cyjsWidget = this;\n",
     "            function myFunc(){\n",
     "               cyjsWidget.createCanvas()\n",
@@ -525,7 +496,7 @@
     "\n",
     "        dispatchRequest: function(){\n",
     "           console.log(\"dispatchRequest\");\n",
-    "           var msgRaw = this.model.get(\"msgStringFromKernel\");\n",
+    "           var msgRaw = this.model.get(\"msgFromKernel\");\n",
     "           var msg = JSON.parse(msgRaw);\n",
     "           console.log(msg);\n",
     "           console.log(\"========================\");\n",
@@ -547,8 +518,8 @@
     "                                                payload: selectedNodes})\n",
     "                  console.log(\" *** jsonString: \")\n",
     "                  console.log(jsonString);\n",
-    "                  this.model.set(\"msgStringFromBrowser\", jsonString);\n",
-    "                  console.log(\"    after setting 'msgStringFromBrowser\");\n",
+    "                  this.model.set(\"msgFromBrowser\", jsonString);\n",
+    "                  console.log(\"    after setting 'msgFromBrowser\");\n",
     "                  this.touch();\n",
     "                  break;\n",
     "               case 'selectNodes':\n",
@@ -598,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -610,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -621,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -629,10 +600,10 @@
     {
      "data": {
       "text/plain": [
-       "['LPCAT2', 'chr1:108746614-108746614']"
+       "['PHB', 'SEC23B', 'STXBP3']"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -657,7 +628,7 @@
        " 'status': 'reply'}"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,6 +636,15 @@
    "source": [
     "cy.getFullResponse()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
