before experimenting with @observe

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -39,6 +39,8 @@
    "source": [
     "import ipywidgets as widgets\n",
     "import json\n",
+    "import time\n",
+    "from IPython.display import display\n",
     "from traitlets import Int, Unicode, Tuple, CInt, Dict, validate, observe\n",
     "\n",
     "class cyjsWidget(widgets.DOMWidget):\n",
@@ -64,11 +66,17 @@
     "                                              \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
+    "      @observe('msgFromBrowser')\n",
+    "      def handleResult(elf, change):\n",
+    "          self.status\n",
     "      #self.selectedNodes = [];\n",
+    "      self._incomingMessage = None;\n",
     "      self.status += \"entering getSelectedNodes\\n\";\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"request\", \"callback\": \"\", \"payload\":\"\"});\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"getSelectedNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": \"\"});\n",
+    "      self.status += \"getSelectedNodes done:      %f\\n\" % time.time()\n",
+    "    \n",
     "    def selectNodes(self, nodes):\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": nodes});\n",
@@ -79,6 +87,7 @@
     "        \n",
     "    @observe('msgFromBrowser')\n",
     "    def msg_arrived(self, change):\n",
+    "       self.status += \"msgFromBrowser has arrived: %f\\n\" % time.time()\n",
     "       rawMessage = change['new']\n",
     "       self._incomingMessage = json.loads(rawMessage)\n",
     "         \n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -569,72 +578,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "cy = cyjsWidget()\n",
-    "cy"
+    "#cy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cy.getSelectedNodes(); "
+    "display(cy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 230,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.clearSelection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['PHB', 'SEC23B', 'STXBP3']"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
     }
    ],
    "source": [
-    "cy.getResponse()"
+    "print(cy.getSelectedNodes())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'callback': '',\n",
-       " 'cmd': 'storeSelectedNodes',\n",
-       " 'payload': ['PHB', 'SEC23B', 'STXBP3'],\n",
-       " 'status': 'reply'}"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial status message\n",
+      "entering getSelectedNodes\n",
+      "getSelectedNodes done:      1480448225.622830\n",
+      "msgFromBrowser has arrived: 1480448225.683294\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "cy.getFullResponse()"
+    "print(cy.status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# cy.getResponse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# cy.getFullResponse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cy.selectNodes([\"MAG\", \"PLD2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# cy.getSelectedNodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# cy.getResponse()"
    ]
   },
   {
