--- a/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
+++ b/self-contained-notebooks/simple/waitOnBrowserResponse.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -694,39 +694,35 @@
      "output_type": "stream",
      "text": [
       "getSelectedNodes about to start observingThread\n",
-      "thread, no message yet, sleeping, loop 1\n",
-      "thread, no message yet, sleeping, loop 2\n"
+      "thread, no message yet, sleeping, loop 1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['PLD3', 'STXBP3']"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cy.getSelectedNodes(); time.sleep(1)\n"
+    "cy.getSelectedNodes();\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thread, no message yet, sleeping, loop 5\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['PLD2', 'chr17:4807191-4807191', 'chr19:40348547-40348547']"
+       "['PLD3']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
